--- a/style.css
+++ b/style.css
@@ -24,12 +24,9 @@ input{
     color: black;
     background-color: transparent;
 }
-/* button{
-    margin: 0.6em;
-    padding: 0.3em;
-} */
+
 img{
     display: block;
     margin: 0.8em 0.8em 0 15em;
-    border: 2px solid black;
+    border: 2px solid rgb(254, 254, 254);
 }
