--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ img{
     margin: 0.8em 0.8em 0 15em;
     border: 2px solid rgb(254, 254, 254);
 }
-displayImages{
-    color: yellowgreen;
+h3{
+    display: inline-block;
+    font-size: 2em;
 }
