--- a/style.css
+++ b/style.css
@@ -25,14 +25,14 @@ input{
     background-color: transparent;
 }
 
-img{
+/* img{
     display: block;
     border: 2px solid rgb(254, 254, 254);
 }
 h3{
     display: inline-block;
     font-size: 2em;
-}
+} */
 /* General styles */
 body {
     font-family: 'Open Sans', sans-serif;
